# argon

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PRD.md  README.md  SANDBOX.md  Sandboxfile  deny.toml  release-please-config.json
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
apps/macos/: project.yml
apps/macos/Resources/: Info.plist
apps/macos/Sources/: AppIntentsMetadataDependency.swift  ArgonApp.swift
apps/macos/Tests/: AgentSleepPreventerTests.swift  AppLaunchTargetTests.swift  AppSignalHandlingTests.swift  AppStateTests.swift  AppUpdateControllerTests.swift  ArgonCLIInstallLinkTests.swift  ArgonCLIInstallOnboardingTests.swift  ArgonCLIInstallStartupPromptTests.swift  ArgonCLITests.swift  CommandContextTests.swift  CommentFontSettingsTests.swift  DiffDocumentTests.swift  DiffModelTests.swift  DiffParserTests.swift  EditorLocatorTests.swift  EditorPreferenceStoreTests.swift  FileTreeTests.swift  GhosttyAppShortcutPassthroughTests.swift  GhosttyConfigurationSettingsTests.swift  GhosttyInputBridgeTests.swift  GitServiceTests.swift  MainActorDispatchTests.swift  RecentProjectsTests.swift  ReviewWindowRegistryTests.swift  ReviewerTerminalTests.swift  SandboxNetworkActivityTests.swift  SandboxNetworkStatusTests.swift  SandboxfileHelpContentTests.swift  SandboxfilePromptTests.swift  SandboxfileSettingsSnapshotTests.swift  SavedAgentProfilesTests.swift  SessionLoaderTests.swift  SessionModelTests.swift  UITestAutomationTests.swift  UserShellTests.swift  WorkspaceAgentControlTests.swift  WorkspaceStateTests.swift  WorkspaceWindowRegistryTests.swift  (+3 more)
crates/argon/: Cargo.toml
crates/argon-core/: Cargo.toml
crates/argon-core/src/: agent_control.rs  diff.rs  highlight.rs  lib.rs  model.rs  protocol.rs  store.rs  target.rs  workspace.rs
crates/argon/src/: main.rs  sandbox_intercept.rs  sandbox_proxy.rs
crates/argon/tests/: draft.rs  sandbox.rs  uncommitted_mode.rs  update_target.rs  workspace.rs
crates/sandbox/: Cargo.toml
docs/: architecture.md  development.md  ghostty-integration.md
scripts/: build-dmg.sh  build-libghostty.sh  build-release-assets.sh  build-release.sh  capture-website-screenshots.sh  dev-argon.sh  generate-homebrew-cask.sh  generate-icon.py  install-dev-skill.sh  postprocess-website-screenshots.py  publish-homebrew-tap.sh
skills/argon-app-review/: SKILL.md
skills/argon-dev-review/: SKILL.md
website/: 404.html  CNAME  index.html  site.css  site.js
website/draft/: index.html  styles.css
(+100 files in other folders)
