[workspace]
members = [
    "crates/argon-core",
    "crates/sandbox",
    "crates/argon",
]
resolver = "2"
default-members = ["crates/argon"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
