[package]
name = "argon-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "plist-load", "regex-onig"] }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile = "3"
