[package]
name = "argon-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
syntect = { version = "5", default-features = false, features = ["plist-load", "regex-onig"] }
two-face = "0.5"
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile = "3"
