[package]
name = "argon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "argon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argon-core = { path = "../argon-core" }
sandbox = { path = "../sandbox" }
chrono.workspace = true
clap.workspace = true
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
